# pak-lab

./: Cargo.toml  LICENSE-APACHE  README.md  configuration.yaml  manifiesto.md
.github/workflows/: coverage.yml  tests.yml
.sqlx/: query-10dce84a96f289e065fd0b2596210192442adaa59d6dc9917a71cdc5c1d2565a.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
