[package]
name = "pak-lab"
author = ["NetCreature, <pak.mailbox.adm@gmail.com>"]
homepage = "https://pak.com.ar"
version = "0.3.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pak_lab"

[dependencies]
actix-web = "4.11.0"
config = "0.15.13"
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.46.1", features = ["macros", "rt-multi-thread"]}

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
         "runtime-tokio-rustls",
         "macros",
         "postgres",
         "uuid",
         "chrono",
         "migrate"
]

[dev-dependencies]
reqwest = "0.12.22"
